# mini-tensor-compiler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: graph_benchmark.rs
docs/: architecture.md  ir.md  optimization_passes.md  runtime.md
examples/: fusion_demo.rs  simple_graph.rs
models/: example.onnx
scripts/: benchmark.sh  export_onnx.py
src/: lib.rs  main.rs
src/benchmark/: mod.rs  profiler.rs
src/graph/: graph.rs  mod.rs  operation.rs  tensor.rs
src/optimizer/: mod.rs  optimizer.rs
src/parser/: onnx_parser.rs
src/passes/: constant_folding.rs  dead_code.rs  fusion.rs  mod.rs  pass.rs
src/runtime/: executor.rs  kernels.rs  mod.rs
src/utils/: logger.rs
tests/: fusion_tests.rs  graph_tests.rs  runtime_tests.rs
